Improved documentation, rewritten movie_to_bag to C++, added tests.

--- a/exiftool_metadata_extractor/src/cpp_exiftool/CMakeLists.txt
+++ b/exiftool_metadata_extractor/src/cpp_exiftool/CMakeLists.txt
@@ -2,4 +2,5 @@
 # SPDX-FileCopyrightText: Czech Technical University in Prague
 
 add_library(exiftool src/ExifTool.cpp src/ExifToolPipe.cpp src/TagInfo.cpp)
-target_include_directories(exiftool PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
+target_include_directories(exiftool SYSTEM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
+target_compile_options(exiftool PRIVATE -w)  # silence warnings
