--- a/lensfun_metadata_extractor/CMakeLists.txt
+++ b/lensfun_metadata_extractor/CMakeLists.txt
@@ -9,8 +9,10 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(catkin REQUIRED COMPONENTS
   cras_cpp_common
   cv_bridge
+  image_geometry
   movie_publisher
   pluginlib
+  sensor_msgs
 )
 
 catkin_package()
@@ -46,18 +48,17 @@ if (CATKIN_ENABLE_TESTING)
 
   # Roslint C++ - checks formatting and some other rules for C++ files
 
-  file(GLOB_RECURSE ROSLINT_INCLUDE include/*.h include/*.hpp)
-  file(GLOB_RECURSE ROSLINT_SRC src/*.cpp src/*.hpp src/*.h)
-  file(GLOB_RECURSE ROSLINT_TEST test/*.cpp)
+  file(GLOB_RECURSE ROSLINT_FILES include/*.h include/*.hpp src/*.cpp src/*.hpp src/*.h test/*.cpp)
 
   set(ROSLINT_CPP_OPTS "--extensions=h,hpp,hh,c,cpp,cc;--linelength=120;--filter=\
     -build/header_guard,-build/include,-readability/namespace,-whitespace/braces,-runtime/references,\
     -build/c++11,-readability/nolint,-readability/todo,-legal/copyright")
-  roslint_cpp(${ROSLINT_INCLUDE} ${ROSLINT_SRC} ${ROSLINT_TEST})
+  roslint_cpp(${ROSLINT_FILES})
 
   roslint_add_test()
 
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_camera_info_manager_lib.cpp)
-# target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-
+  catkin_add_gtest(test_${PROJECT_NAME} test/test_extractor.cpp)
+  target_link_libraries(test_${PROJECT_NAME} ${PROJECT_NAME} ${catkin_LIBRARIES})
+  target_include_directories(test_${PROJECT_NAME} PRIVATE src)
+  target_compile_definitions(test_${PROJECT_NAME} PRIVATE -DTEST_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/test")
 endif()
