--- a/exiftool_metadata_extractor/CMakeLists.txt
+++ b/exiftool_metadata_extractor/CMakeLists.txt
@@ -41,19 +41,22 @@ if (CATKIN_ENABLE_TESTING)
 
   # Roslint C++ - checks formatting and some other rules for C++ files
 
-  file(GLOB_RECURSE ROSLINT_INCLUDE include/*.h include/*.hpp)
-  file(GLOB_RECURSE ROSLINT_SRC src/*.cpp src/*.hpp src/*.h)
-  list(FILTER ROSLINT_SRC EXCLUDE REGEX ".*/cpp_exiftool/.*")
-  file(GLOB_RECURSE ROSLINT_TEST test/*.cpp)
+  file(GLOB_RECURSE ROSLINT_FILES include/*.h include/*.hpp src/*.cpp src/*.hpp src/*.h test/*.cpp)
+  list(FILTER ROSLINT_FILES EXCLUDE REGEX ".*/cpp_exiftool/.*")
 
   set(ROSLINT_CPP_OPTS "--extensions=h,hpp,hh,c,cpp,cc;--linelength=120;--filter=\
     -build/header_guard,-build/include,-readability/namespace,-whitespace/braces,-runtime/references,\
     -build/c++11,-readability/nolint,-readability/todo,-legal/copyright")
-  roslint_cpp(${ROSLINT_INCLUDE} ${ROSLINT_SRC} ${ROSLINT_TEST})
+  roslint_cpp(${ROSLINT_FILES})
 
   roslint_add_test()
 
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_camera_info_manager_lib.cpp)
-# target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+  catkin_add_gtest(test_${PROJECT_NAME} test/test_extractor.cpp)
+  target_link_libraries(test_${PROJECT_NAME} ${PROJECT_NAME} ${catkin_LIBRARIES})
+  #catkin_lint: ignore ambiguous_include_path
+  target_include_directories(test_${PROJECT_NAME} PRIVATE src)
+  target_compile_definitions(test_${PROJECT_NAME} PRIVATE TEST_DATA_DIR="${CATKIN_DEVEL_PREFIX}/share/test_data")
 
+  add_custom_command(TARGET test_${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/../test_data" "${CATKIN_DEVEL_PREFIX}/share/test_data")
 endif()
