--- a/exiv2_metadata_extractor/rosdoc.yaml
+++ b/exiv2_metadata_extractor/rosdoc.yaml
@@ -4,4 +4,5 @@
 - builder: doxygen
   file_patterns: '*.h *.hpp *.hh *.dox'
   exclude_patterns: '*/cmake-build-*/*'
+  use_mdfile_as_mainpage: 'README.md'
   required: True
