Compatibility with Melodic.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,10 +14,16 @@ jobs:
     strategy:
       matrix:
         env:
-          - {ROS_DISTRO: noetic, ROS_REPO: testing}
+          - ROS_DISTRO: melodic
+            DOCKER_IMAGE: "ros:melodic-perception-bionic"
+            UPSTREAM_WORKSPACE: .github/ci.melodic.rosinstall
+            AFTER_SETUP_UPSTREAM_WORKSPACE: "echo 'yaml https://raw.githubusercontent.com/ros/rosdistro/master/rosdep/base.yaml' > /etc/ros/rosdep/sources.list.d/21-master.list && rosdep update --include-eol-distros --rosdistro melodic"
+          - ROS_DISTRO: noetic
+            ROS_REPO: testing
+            DOCKER_IMAGE: "ros:noetic-perception-focal"
+            UPSTREAM_WORKSPACE: .github/ci.noetic.rosinstall
     env:
       CCACHE_DIR: ${{ github.workspace }}/.ccache # Directory for ccache (and how we enable ccache in industrial_ci)
-      UPSTREAM_WORKSPACE: .github/ci.rosinstall
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
