--- a/exiftool_metadata_extractor/CMakeLists.txt
+++ b/exiftool_metadata_extractor/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(${PROJECT_NAME} src/ExiftoolMetadataExtractor.cpp)
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${catkin_LIBRARIES} PRIVATE exiftool)
 
-install(TARGETS exiftool ${PROJECT_NAME}
+install(TARGETS ${PROJECT_NAME}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
