--- a/lensfun_metadata_extractor/package.xml
+++ b/lensfun_metadata_extractor/package.xml
@@ -22,6 +22,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_geometry</build_depend>
   <build_depend>lensfun-dev</build_depend>
+  <build_depend>libglib-dev</build_depend>  <!-- silent dependency of lensfun-dev -->
   <build_depend>movie_publisher</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>sensor_msgs</build_depend>
