--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,11 @@
 name: CI
 
 # This determines when this workflow is run
-on: [push, pull_request] # on all pushes and PRs
+on:
+  push:
+    branches: "melodic-devel"
+  pull_request:
+    branches: "*"
 
 jobs:
   industrial_ci:
