Fixed license file.

--- a/exiftool_metadata_extractor/package.xml
+++ b/exiftool_metadata_extractor/package.xml
@@ -9,8 +9,8 @@
   <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
   <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
 
-  <license file="../LICENSES/BSD-3-Clause.txt">BSD</license>
-  <license file="../LICENSES/LicenseRef-ExiftoolCpp.txt">ExiftoolCpp</license>
+  <license file="LICENSE">BSD</license>
+  <license file="src/cpp_exiftool/LICENSE">ExiftoolCpp</license>
 
   <url type="repository">https://github.com/ctu-vras/movie_publisher</url>
   <url type="bugtracker">https://github.com/ctu-vras/movie_publisher/issues</url>
