--- a/exiv2_metadata_extractor/package.xml
+++ b/exiv2_metadata_extractor/package.xml
@@ -9,8 +9,8 @@
   <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
   <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
 
-  <license file="../LICENSES/BSD-3-Clause.txt">BSD</license>
-  <license file="../LICENSES/GPL-2.0-or-later.txt">GPLv2</license>
+  <license file="LICENSE">BSD</license>
+  <license file="LICENSE.GPL">GPLv2</license>
 
   <url type="repository">https://github.com/ctu-vras/movie_publisher</url>
   <url type="bugtracker">https://github.com/ctu-vras/movie_publisher/issues</url>
