--- a/lensfun_metadata_extractor/package.xml
+++ b/lensfun_metadata_extractor/package.xml
@@ -9,8 +9,8 @@
   <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
   <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
 
-  <license file="../LICENSES/BSD-3-Clause.txt">BSD</license>
-  <license file="../LICENSES/CC-BY-SA-3.0.txt">CC-BY-SA 3.0</license> <!-- Test data only -->
+  <license file="LICENSE">BSD</license>
+  <license file="LICENSE.CC-BY-SA-3.0">CC-BY-SA 3.0</license> <!-- Test data only -->
 
   <url type="repository">https://github.com/ctu-vras/movie_publisher</url>
   <url type="bugtracker">https://github.com/ctu-vras/movie_publisher/issues</url>
